# ruffian

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: auto-approve.yml  auto-release.yml  ci.yml  publish.yml  ruff-upgrade.yml
python/example_plugins/: example_plugin.py
scripts/: bump_version.py  create_release.py  update_ruff.py
src/: cli.rs  config.rs  main.rs  noqa.rs  output.rs  plugin.rs  ruff.rs  runner.rs
src/rules/: mod.rs  rfn001_too_many_module_lines.rs  rule.rs  too_many_module_lines.rs
tests/fixtures/: clean.py
tests/integration/: test_check.rs  test_output_fidelity.rs
