[package]
name = "ruffian"
version = "0.5.0"
edition = "2021"
description = "A superset of ruff: runs ruff internally, adds built-in rules, and supports user-defined plugin executables"
license = "MIT"
repository = "https://github.com/tluolamo/ruffian"
keywords = ["python", "linter", "ruff"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "ruffian"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime for concurrent subprocess + rule evaluation
tokio = { version = "1", features = ["full"] }

# Parallel file processing for built-in rules
rayon = "1"
ignore = "0.4"

# Serialization — ruff JSON output + plugin contract
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config — reading [tool.ruffian] from pyproject.toml
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Python AST parsing — pulled from the ruff git repo.
# NOTE: ruff does not publish these as standalone crates on crates.io.
# Pin tightly; update deliberately when upgrading ruff compatibility.
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.15.8" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.15.8" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "0.15.8" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.15.8" }

[dev-dependencies]
# Integration test helpers
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"

[[test]]
name = "integration"
path = "tests/integration/test_check.rs"

[[test]]
name = "output_fidelity"
path = "tests/integration/test_output_fidelity.rs"
